@@ -88,6 +88,7 @@ gerritclient =
     plugin_reload=gerritclient.commands.plugin:PluginReload
     plugin_show=gerritclient.commands.plugin:PluginShow
     project_branch_list=gerritclient.commands.project:ProjectBranchList
+    project_branch_show=gerritclient.commands.project:ProjectBranchShow
     project_create=gerritclient.commands.project:ProjectCreate
     project_delete=gerritclient.commands.project:ProjectDelete
     project_description_set=gerritclient.commands.project:ProjectDescriptionSet
